# hakyll-diagrams

./: .gitignore  .justfile.json  LICENSE  README.md  cabal.project  cabal.project.lower  cabal.project.lower.freeze  cabal.project.upper  default.nix  flake.nix  fourmolu.yaml  hakyll-diagrams.cabal  justfile  shell.nix
.github/workflows/: ci.yaml
ci-files/: Dockerfile
docs/: Hakyll-Web-Pandoc-Diagrams.html  doc-index.html  hakyll-diagrams.haddock  index.html
src/Hakyll/Web/Pandoc/: Diagrams.hs
test/: HTMLSVGCompare.hs  Main.hs  Util.hs
test/data/: external.html  external.md  external_bare.html  external_bare.md  external_figure.html  external_figure.md  external_figure_bare.html  external_figure_bare.md  global_import.md  inline.html  inline.md  inline_bare.html  inline_bare.md  inline_figure.html  inline_figure.md  inline_figure_bare.html  inline_figure_bare.md  metadata.md
